correct word on property flex-wrap

--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -46,7 +46,7 @@
     flex-direction: column;
     box-sizing: border-box;
     justify-content: space-evenly;
-    flex-wrap: wrapnpm;
+    flex-wrap: wrap;
 }
 
 .divFot {
